--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4624,7 +4624,7 @@ th {
         width: 120px;
         min-height: 60px;
         border-bottom: 1px solid #444;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -4656,7 +4656,7 @@ th {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-size: 0.9em; }
         .slidermenu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
@@ -4714,7 +4714,7 @@ th {
         width: 120px;
         min-height: 100px;
         border-bottom: 1px solid #444;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -4727,7 +4727,7 @@ th {
           padding: 3px;
           font-size: 0.9em;
           letter-spacing: 1px;
-          font-family: 'Helvetica Neue', sans-serif;
+          font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
           font-weight: 200; }
       .menu ul li.top {
         border-top: 1px solid #444; }
@@ -4749,7 +4749,7 @@ th {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-size: 0.9em; }
         .menu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
@@ -4827,7 +4827,7 @@ th {
         width: 120px;
         min-height: 50px;
         border-bottom: 1px solid #444;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -4859,7 +4859,7 @@ th {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-size: 0.9em; }
         .slidermenu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
@@ -4951,13 +4951,13 @@ h1 {
   margin: 0; }
 
 h2 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 200;
   font-weight: 100;
   font-size: 3.5em; }
 
 h3 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 200;
   color: #3e606f;
   font-size: 2em; }
@@ -4970,7 +4970,7 @@ h3 {
   z-index: 0; }
 
 .heading {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
   letter-spacing: 2px;
   color: #5c5c5c;
@@ -4992,7 +4992,7 @@ h3 {
   text-align: center;
   letter-spacing: 2px;
   color: #5c5c5c;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 200;
   font-size: 2em;
   font-weight: 200; }
@@ -5010,7 +5010,7 @@ h3 {
     margin: 20px auto;
     width: 100%;
     max-width: 300px;
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-weight: 200;
     color: #3e606f;
     background-color: #d1dbbd; }
@@ -5019,7 +5019,7 @@ h3 {
       position: relative;
       background-color: #91aa9d; }
       .constituency-form .constituency .title .constituency_title {
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-weight: 200;
         font-size: 1.5em;
         color: #f2f2eb;
@@ -5068,7 +5068,8 @@ h3 {
 
 /* Submit buttons - Select your constituency & Email your MP */
 #electorate_submit,
-#mp_email_submit {
+#mp_email_submit,
+#contact_form_submit {
   width: 120px;
   height: 30px;
   background-color: #5c5c5c;
@@ -5088,7 +5089,7 @@ h3 {
   margin: 0 10px; }
 
 .pol_info1 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
   font-weight: 200;
   color: #f2f2eb;
@@ -5102,7 +5103,7 @@ h3 {
   padding: 15px 10px 10px 10px; }
 
 .pol_info2 {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 200;
   letter-spacing: 2px;
   color: #f2f2eb;
@@ -5219,7 +5220,7 @@ form.selection-form {
     display: block;
     padding: 5px 10px;
     border-color: #ccc;
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-weight: 200;
     color: #f2f2eb; }
   form.selection-form input[type=submit].mp_dark:hover {
@@ -5267,7 +5268,7 @@ form.selection-form {
       height: 2.6em;
       text-align: left; }
     #politicians_container .politician .politician_title {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
       font-weight: 200;
       font-size: 1.2em;
       color: #f2f2eb;
@@ -5352,14 +5353,14 @@ form.selection-form {
     width: 95%;
     margin: 0 auto; }
     .search-box form.politician-selection-form .title {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
       font-weight: 200;
       font-size: 1.7em;
       display: block;
       text-align: center;
       margin: 15px 0 50px 0; }
     .search-box form.politician-selection-form label {
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
       font-weight: 200;
       font-size: 1.7em;
       display: block;
