--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -3,7 +3,7 @@
 @import 'normalize';
 
 @mixin HelveticaNeue {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 200;
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 .error {
-   font-family: 'Helvetica Neue', sans-serif;
+   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
    font-weight: 600;
    color: $dark_text;
    font-size: 0.9em;
@@ -60,7 +60,7 @@ body {
 }
 
 .heading {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
   font-size: 6em;
   letter-spacing: 2px;
@@ -85,7 +85,7 @@ body {
       clear: both;
       text-align: right;
       label {
-        font-family: 'Helvetica Neue', sans-serif;
+         font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-weight: 200;
         color: $white;
         font-size: 1.2em;
@@ -99,7 +99,7 @@ body {
         display: inline-block;
       }
       input[type=submit] {
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         width: 90px;
         float: right;
         clear: both;
@@ -134,7 +134,7 @@ footer {
   .copyright {
     text-align: center;
     color: $white;
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-weight: 200;
     font-size: 0.8em;
     letter-spacing: 1px;
