--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5159,6 +5159,13 @@ hr.med_grey {
     height: 250px;
     margin-bottom: 30px; }
 
+/* Contact form error */
+.error {
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 400;
+  color: red;
+  font-size: 0.9em; }
+
 .email_mp_title {
   margin-top: 70px;
   font-family: 'Helvetica', sans-serif;
