--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4799,7 +4799,7 @@ footer {
         width: 120px;
         min-height: 60px;
         border-bottom: 1px solid #444;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -4831,7 +4831,7 @@ footer {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         font-size: 0.9em; }
         .slidermenu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
@@ -4889,7 +4889,7 @@ footer {
         width: 120px;
         min-height: 100px;
         border-bottom: 1px solid #444;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -4902,7 +4902,7 @@ footer {
           padding: 3px;
           font-size: 0.9em;
           letter-spacing: 1px;
-          font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+          font-family: 'Helvetica Neue', sans-serif;
           font-weight: 200; }
       .menu ul li.top {
         border-top: 1px solid #444; }
@@ -4924,7 +4924,7 @@ footer {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         font-size: 0.9em; }
         .menu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
@@ -5002,7 +5002,7 @@ footer {
         width: 120px;
         min-height: 50px;
         border-bottom: 1px solid #444;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -5034,7 +5034,7 @@ footer {
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         font-size: 0.9em; }
         .slidermenu ul.sub-menu li.sub-menu-section .sub-menu-contents {
           display: inline;
