--- a/public/scss/menu_mediaqueries.scss
+++ b/public/scss/menu_mediaqueries.scss
@@ -1,5 +1,5 @@
 @mixin HelveticaNeue {
-  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-weight: 200;
 }
 
@@ -81,7 +81,7 @@ $dark_text: #5c5c5c;
         width: 120px;
         min-height: 60px;
         border-bottom: 1px solid #444;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
         display: table;
         position: relative;
@@ -118,7 +118,7 @@ $dark_text: #5c5c5c;
         border-right: 5px solid transparent;
         display: table;
         position: relative;
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: 'Helvetica Neue', sans-serif;
         font-size: 0.9em;
         .sub-menu-contents {
            display: inline;
@@ -196,7 +196,7 @@ $dark_text: #5c5c5c;
             width: 120px;
             min-height: 100px;
             border-bottom: 1px solid #444;
-            font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            font-family: 'Helvetica Neue', sans-serif;
             color: #f2f2eb;
             display: table;
             position: relative;
@@ -235,7 +235,7 @@ $dark_text: #5c5c5c;
             border-right: 5px solid transparent;
             display: table;
             position: relative;
-            font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            font-family: 'Helvetica Neue', sans-serif;
             font-size: 0.9em;
             .sub-menu-contents {
                display: inline;
@@ -336,7 +336,7 @@ $dark_text: #5c5c5c;
              width: 120px;
              min-height: 50px;
              border-bottom: 1px solid #444;
-             font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+             font-family: 'Helvetica Neue', sans-serif;
              color: #f2f2eb;
              display: table;
              position: relative;
@@ -373,7 +373,7 @@ $dark_text: #5c5c5c;
              border-right: 5px solid transparent;
              display: table;
              position: relative;
-             font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+             font-family: 'Helvetica Neue', sans-serif;
              font-size: 0.9em;
              .sub-menu-contents {
                  display: inline;
