--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -62,7 +62,7 @@ body {
 .heading {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 6em;
+  font-size: 5.6em;
   letter-spacing: 2px;
   color: $white;
   text-align: right;
@@ -85,7 +85,7 @@ body {
       clear: both;
       text-align: right;
       label {
-         font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: Helvetica, Arial, sans-serif;
         font-weight: 200;
         color: $white;
         font-size: 1.2em;
@@ -99,7 +99,7 @@ body {
         display: inline-block;
       }
       input[type=submit] {
-        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-family: Helvetica, Arial, sans-serif;
         width: 90px;
         float: right;
         clear: both;
@@ -146,7 +146,7 @@ footer {
 
 @media all and (max-width: 1024px) {
    .heading {
-      font-size: 4.85em;
+      font-size: 4em;
    }
 }
 
@@ -165,7 +165,7 @@ footer {
    }
 
    .heading {
-      font-size: 4.8em;
+      font-size: 3.5em;
       font-weight: 100;
    }
 
@@ -216,7 +216,8 @@ footer {
    }
 
    .heading {
-      font-size: 3.5em;
+      font-family: Helvetica, Arial, sans-serif;
+      font-size: 2.1em;
    }
 
    .postcode-search  {
@@ -243,7 +244,8 @@ footer {
    .heading {
       position: absolute;
       top: 0;
-      font-size: 2.2em;
+      font-family: Helvetica, Arial, sans-serif;
+      font-size: 1.7em;
    }
 }
 
