Email Ministers page styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4920,7 +4920,7 @@ strong {
   color: #5c5c5c; }
 
 #menu-button i {
-  color: #5c5c5c; }
+  color: #828282; }
 
 .smt {
   color: #55acee; }
@@ -4976,7 +4976,7 @@ h3 {
   color: #5c5c5c;
   text-align: right;
   padding-right: 0;
-  font-size: 6em; }
+  font-size: 5.6em; }
 
 /* Select My MP Page */
 .contents {
@@ -5295,8 +5295,15 @@ form.selection-form {
       width: 100%;
       position: relative;
       margin: 0;
-      height: 3.3em;
+      height: 3.7em;
       text-align: left; }
+      #politicians_container .politician .politician_position .minister_position {
+        font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        font-weight: 200;
+        color: #f2f2eb;
+        letter-spacing: 1px;
+        line-height: 1.1em;
+        font-size: 1.1em; }
     #politicians_container .politician .politician_title {
       font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
       font-weight: 200;
@@ -5304,14 +5311,6 @@ form.selection-form {
       color: #f2f2eb;
       letter-spacing: 2px;
       padding-left: 10px; }
-    #politicians_container .politician .minister-position {
-      font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-      font-weight: 200;
-      color: #f2f2eb;
-      letter-spacing: 1px;
-      padding-left: 10px;
-      line-height: 4em;
-      font-size: 1em; }
     #politicians_container .politician .mp_name:after,
     #politicians_container .politician .senator_name:after,
     #politicians_container .politician .minister_name:after {
@@ -5483,7 +5482,7 @@ form.selection-form {
     padding: 0 8px; } }
 @media all and (max-width: 1023px) {
   .heading {
-    font-size: 4.85em; } }
+    font-size: 4em; } }
 @media all and (max-width: 768px) {
   .page-body {
     overflow-x: hidden;
@@ -5523,7 +5522,7 @@ form.selection-form {
     padding: 0 8px; }
 
   .heading {
-    font-size: 4em; }
+    font-size: 3.5em; }
 
   .sub-heading {
     font-size: 2.8em; }
@@ -5583,7 +5582,7 @@ form.selection-form {
     border: 0; }
 
   .heading {
-    font-size: 3.5em; }
+    font-size: 2.6em; }
 
   .sub-heading {
     font-size: 2.5em; }
@@ -5607,6 +5606,9 @@ form.selection-form {
       #politicians_container .politician .sm-links a {
         font-size: 0.9em; } }
 @media all and (max-width: 570px) {
+  .heading {
+    font-size: 2.3em; }
+
   .box {
     min-width: 399px;
     max-width: 399px;
@@ -5682,8 +5684,13 @@ form.selection-form {
     left: 0;
     border: 0; }
 
+  .header {
+    right: 10px;
+    top: 10px; }
+
   .heading {
-    font-size: 2.2em; }
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.4em; }
 
   .box {
     width: 80%;
@@ -5707,8 +5714,16 @@ form.selection-form {
       #politicians_container .politician .sm-links a {
         font-size: 1em; } }
 @media all and (max-width: 320px) {
+  .header {
+    right: 10px;
+    top: 10px; }
+
   .heading {
-    font-size: 1.9em; }
+    position: absolute;
+    top: 0;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.3em;
+    margin-right: 0; }
 
   .sub-heading {
     font-size: 1.7em; }
